--- a/Stupid Benz Bot XP System/index.html
+++ b/Stupid Benz Bot XP System/index.html
@@ -3,22 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>repl.it</title>
+        <title>Stupid Benz Bot XP System</title>
         <link href="style.css" rel="stylesheet" type="text/css" />
-</script>
     </head>
     <body>
         <script src="script.js"></script>
-        <script>
-            getData();
-
-            async function getData() {
-                const users = await fetch(
-                    'https://raw.githubusercontent.com/Stupid-Benz/Stupid-Benz-Bot/master/Stupid%20Benz%20Bot%20XP%20System/user.json?token=APX53RVZK5AJGCVTL4UYZUK64SVLK'
-                );
-                const data = await users.json();
-                console.log(data);
-            }
-        </script>
     </body>
 </html>
