--- a/Stupid Benz Bot XP System/index.html
+++ b/Stupid Benz Bot XP System/index.html
@@ -1,12 +1,98 @@
 <!DOCTYPE html>
 <html lang=en>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <title>Stupid Benz Bot XP System</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-        <script src="script.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Stupid Benz Bot XP System</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
+    <table class="leaderboard">
+      <thead>
+        <tr>
+          <th>Rank</th>
+          <th>Avatar</th>
+          <th>User Name</th>
+          <th>User ID</th>
+          <th>Message</th>
+          <th>EXP</th>
+          <th>Level</th>
+          <th>Next Level EXP</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="leaderboardMember">
+          <td class="leaderboardMemberRank">1</td>
+          <td><img src="https://cdn.discordapp.com/avatars/666186125026525194/2e09ff1f5dcebd6891d4cebe4bbea064.webp" alt="icon" class="leaderboardMemberAvatar"></td>
+          <td>Stupid Benz</td>
+          <td>666186125026525194</td>
+          <td>685</td>
+          <td>3425</td>
+          <td>7</td>
+          <td>666</td>
+        </tr>
+        <tr class="leaderboardMember">
+          <td class="leaderboardMemberRank">2</td>
+          <td><img src="https://cdn.discordapp.com/avatars/589760724323139631/187c68cf16b7b414cb20e975d05097c2.webp" alt="icon" class="leaderboardMemberAvatar"></td>
+          <td>Cathay3520</td>
+          <td>589760724323139631</td>
+          <td>278</td>
+          <td>1390</td>
+          <td>6</td>
+          <td>1011</td>
+        </tr>
+        <tr class="leaderboardMember">
+          <td class="leaderboardMemberRank">3</td>
+          <td><img src="https://cdn.discordapp.com/avatars/653086042752286730/800c0f17a309d610b9d0748cb924a561.webp" alt="icon" class="leaderboardMemberAvatar"></td>
+          <td>windowsboy111</td>
+          <td>653086042752286730</td>
+          <td>261</td>
+          <td>1305</td>
+          <td>6</td>
+          <td>1096</td>
+        </tr>
+        <tr class="leaderboardMember">
+          <td class="leaderboardMemberRank">4</td>
+          <td><img src="https://cdn.discordapp.com/avatars/623823202073706496/970b669c838c0ede44051a5e0b449f89.webp" alt="icon" class="leaderboardMemberAvatar"></td>
+          <td>Siriusmart</td>
+          <td>623823202073706496</td>
+          <td>117</td>
+          <td>585</td>
+          <td>4</td>
+          <td>40</td>
+        </tr>
+        <tr class="leaderboardMember">
+          <td class="leaderboardMemberRank">5</td>
+          <td><img src="https://cdn.discordapp.com/avatars/664644679232520233/6ceab73bfcb22b671108d72516428def.webp" alt="icon" class="leaderboardMemberAvatar"></td>
+          <td>Vincintelligent</td>
+          <td>664644679232520233</td>
+          <td>70</td>
+          <td>350</td>
+          <td>4</td>
+          <td>275</td>
+        </tr>
+        <tr class="leaderboardMember">
+          <td class="leaderboardMemberRank">6</td>
+          <td><img src="https://cdn.discordapp.com/avatars/331681736415248404/2b849ce8f216a360c9e1b0983feac553.webp" alt="icon" class="leaderboardMemberAvatar"></td>
+          <td>Justinude Yiporn</td>
+          <td>331681736415248404</td>
+          <td>11</td>
+          <td>55</td>
+          <td>2</td>
+          <td>null</td>
+        </tr>
+        <!--<tr class="leaderboardMember">
+          <td class="leaderboardMemberRank">1</td>
+          <td><img src="" alt="icon" class="leaderboardMemberAvatar"></td>
+          <td>Stupid Benz</td>
+          <td>666186125026525194</td>
+          <td>685</td>
+          <td>3425</td>
+          <td>7</td>
+          <td>666</td>-->
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
